--- a/Style.css
+++ b/Style.css
@@ -1,48 +1,69 @@
-body{
+body {
     margin: 0;
     padding: 0;
 }
-header{
+
+header {
     display: flex;
     width: 100%;
     height: 64px;
     background: #2196F3;
 }
-a{
+
+a {
     padding: 25px 10px 25px 10px;
-    margin-left:62px;
+    margin-left: 62px;
     text-decoration: none;
     color: white;
 }
-a:hover{
-    background: #1E88E5;
-;
+
+a:hover {
+    background: #1E88E5;;
 }
-main{
-    padding: 48px 62px;
+
+main {
+    margin: 48px 62px;
     display: flex;
     flex-wrap: wrap;
 
 }
-.img{
+
+.img {
     width: 225px;
     height: 225px;
     margin: 16px;
-    position: absolute;
-
+    position: relative;
 }
-img{
+.img:hover
+    .heart{
+         display:block}
+
+
+img {
     width: 100%;
     height: 100%;
 
 }
-@media (max-width: 634px){
-    main{
+
+
+@media (max-width: 634px) {
+    main {
         justify-content: center;
     }
 }
-.heart{
+
+.heart {
+    display: none;
     width: 40px;
     height: 36px;
-    position: relative;
+    position: absolute;
+    left: 182px;
+    bottom: 3px;
+
+}
+
+.heart img {
+    width: 100%;
+    height: 100%;
+
 }
